objects/A1__c.object
<CustomObject>
    <fields>
        <fullName>Field_10__c</fullName>
        <label>Field 10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_13__c</fullName>
        <label>Field 13</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PL_1__c</fullName>
        <label>PL 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PL_2__c</fullName>
        <label>PL 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>A1</label>
    <nameField>
        <label>A1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A1</pluralLabel>
    <recordTypes>
        <fullName>RT1</fullName>
        <active>true</active>
        <label>RT1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>